c/syntacts.h

typedef void* Handle;
/////////////////////////////////////////////////////////////////////////////
// OPERATORS
/////////////////////////////////////////////////////////////////////////////

EXPORT Handle Product_create(Handle lhs, Handle rhs);
EXPORT Handle Sum_create(Handle lhs, Handle rhs);
///////////////////////////////////////////////////////////////////////////////
// SEQUENCE
///////////////////////////////////////////////////////////////////////////////

EXPORT Handle Sequence_create();
EXPORT double Sequence_getHead(Handle handle);
EXPORT void Sequence_setHead(Handle handle, double head);
EXPORT void Sequence_pushFlt(Handle handle, double t);
EXPORT void Sequence_pushSig(Handle handle, Handle signal);
EXPORT void Sequence_pushSeq(Handle handle, Handle sequence);
EXPORT void Sequence_insertSig(Handle handle, Handle signal, double t);
EXPORT void Sequence_insertSeq(Handle handle, Handle sequence, double t);
EXPORT void Sequence_clear(Handle handle);
EXPORT Handle Sequence_SigSig(Handle lhs, Handle rhs);
EXPORT Handle Sequence_SigFlt(Handle lhs, double rhs);
EXPORT Handle Sequence_FltSig(double lhs, Handle rhs);
EXPORT void Sequence_SeqFlt(Handle lhs, double rhs);
EXPORT void Sequence_SeqSig(Handle lhs, Handle rhs);
EXPORT void Sequence_SeqSeq(Handle lhs, Handle rhs);
///////////////////////////////////////////////////////////////////////////////
// GENERAL
///////////////////////////////////////////////////////////////////////////////

EXPORT Handle Time_create();
EXPORT Handle Scalar_create(double value);
EXPORT Handle Ramp_create1(double initial, double rate);
EXPORT Handle Ramp_create2(double initial, double final, double duration);
EXPORT Handle Noise_create();
EXPORT Handle Expression_create(const char* expr);
EXPORT Handle Samples_create(float* samples, int nSamples, double sampleRate);
// TODO: PolyBezier

///////////////////////////////////////////////////////////////////////////////
// PROCESS
///////////////////////////////////////////////////////////////////////////////

EXPORT Handle Repeater_create(Handle signal, int repetitions, double delay);
EXPORT Handle Stretcher_create(Handle signal, double factor);
EXPORT Handle Reverser_create(Handle signal);
///////////////////////////////////////////////////////////////////////////////
// ENVELOPE
///////////////////////////////////////////////////////////////////////////////

EXPORT Handle Envelope_create(double duration, double amp);
EXPORT Handle ASR_create(double a, double s, double r, double amp);
EXPORT Handle ADSR_create(double a, double d, double s, double r, double amp1, double amp2);
EXPORT Handle ExponentialDecay_create(double amplitude, double decay);
// TODO: KeyedEnvelope, Curves, SignalEnvelope 

///////////////////////////////////////////////////////////////////////////////
// OSCILLATOR
///////////////////////////////////////////////////////////////////////////////

EXPORT Handle Sine_create1(Handle x);
EXPORT Handle Sine_create2(double hertz);
EXPORT Handle Sine_create3(double initial, double rate);
EXPORT Handle Sine_create4(double hertz, Handle modulation, double index);
EXPORT Handle Square_create1(Handle x);
EXPORT Handle Square_create2(double hertz);
EXPORT Handle Square_create3(double initial, double rate);
EXPORT Handle Square_create4(double hertz, Handle modulation, double index);
EXPORT Handle Saw_create1(Handle x);
EXPORT Handle Saw_create2(double hertz);
EXPORT Handle Saw_create3(double initial, double rate);
EXPORT Handle Saw_create4(double hertz, Handle modulation, double index);
EXPORT Handle Triangle_create1(Handle x);
EXPORT Handle Triangle_create2(double hertz);
EXPORT Handle Triangle_create3(double initial, double rate);
EXPORT Handle Triangle_create4(double hertz, Handle modulation, double index);
EXPORT Handle Pwm_create(double frequency, double dutyCycle);
///////////////////////////////////////////////////////////////////////////////
// LIBRARY
///////////////////////////////////////////////////////////////////////////////

EXPORT bool Library_saveSignal(Handle signal, const char* name);
EXPORT Handle Library_loadSignal(const char* name);
EXPORT bool Library_deleteSignal(const char* name);
EXPORT bool Library_exportSignal(Handle signal, const char* filePath, int format, int sampleRate, double maxLength);
EXPORT Handle Library_importSignal(const char* filePath, int format, int sampleRate);
///////////////////////////////////////////////////////////////////////////////
// DEBUG
///////////////////////////////////////////////////////////////////////////////

EXPORT int Debug_sigMapSize();